feat: implement add new task feature

--- a/client/src/app/header/header.component.css
+++ b/client/src/app/header/header.component.css
@@ -1,6 +1,9 @@
 header {
   border-bottom: black solid 1px;
   padding: 1rem 2rem;
+  position: sticky;
+  top: 0;
+  background-color: white;
 }
 
 .container {
