--- a/client/src/app/tasks-grid/task-card/task-card.component.css
+++ b/client/src/app/tasks-grid/task-card/task-card.component.css
@@ -1,5 +1,5 @@
 .task-card__container {
-  max-width: 340px;
+  width: 340px;
   display: flex;
   gap: 0.75rem;
   flex-direction: column;
@@ -62,6 +62,8 @@
   flex-direction: column;
   gap: 1rem;
   text-align: center;
+  max-height: 6rem;
+  overflow: scroll;
 }
 
 .description-input {
@@ -170,7 +172,7 @@ task-card__apply-changes {
   display: block;
   width: 100%;
   height: 48px;
-  background: #ffac11;
+  background: var(--main-btn-collor);
   color: #000000;
   border: none;
   border-radius: 0.3rem;
