--- a/client/src/app/tasks-grid/tasks-grid.component.html
+++ b/client/src/app/tasks-grid/tasks-grid.component.html
@@ -1,6 +1,6 @@
 
 <div class="tasks-grid__container">
-    @for (task of tasks; track task.id) {
+    @for (task of taskService.tasks(); track task.id) {
         <app-task-card
                 [id]="task.id"
                 [creationFullDate]="task.creationDate"
