feat: implement filtering feature

--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -5,10 +5,10 @@
     </div>
     <div class="tasks-state-categories">
       <ul class="tasks-state-categories__list">
-        <li class="tasks-state-categories__list__elem"><a href="#">All Tasks</a></li>
-        <li class="tasks-state-categories__list__elem"><a href="#">Pending</a></li>
-        <li class="tasks-state-categories__list__elem"><a href="#">In Progress</a></li>
-        <li class="tasks-state-categories__list__elem"><a href="#">Finished</a></li>
+        <li class="tasks-state-categories__list__elem"><a href="#" (click)="onAllClicked()">All Tasks</a></li>
+        <li class="tasks-state-categories__list__elem"><a href="#" (click)="onPendingClicked()">Pending</a></li>
+        <li class="tasks-state-categories__list__elem"><a href="#" (click)="onProgressClicked()">In Progress</a></li>
+        <li class="tasks-state-categories__list__elem"><a href="#" (click)="onFinishedClicked()">Finished</a></li>
       </ul>
     </div>
     <div class="authentication">
